--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,15 @@
+/* 
+    Template    : "Beautiful Photo Album"
+    Author      : "Prodip M"
+    Created at  : "10/01/2021"
+*/
+
+
 *{
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
 }
-
-
-
-
 
 .main{
     position: relative;
@@ -14,13 +17,14 @@
     height: 100%;
     padding: 15px 0;
 }
-.main h1{
+.header-title{
     position: relative;
     text-align: center;
     font-family: 'Great Vibes', cursive;
     padding-top: 40px;
     font-size: 60px;
 }
+
 .header-description{
     position: relative;
     text-align: center;
@@ -104,8 +108,6 @@
     grid-row-start: span 1;
 }
 
-
-
 .frame img{
     width: 100%;
     height: 100%;
@@ -120,10 +122,6 @@
 }
 
 
-
-
-
-
 footer {
     width: 100%;
 }
@@ -135,11 +133,13 @@ footer {
     justify-content: space-between;
     padding: 30px 0px;
     margin-top: 50px;
+    align-items: center;
 }
 
 ul.social-menu {
     list-style: none;
     display: flex;
+    
 }
 
 .social-menu li{
@@ -149,7 +149,126 @@ ul.social-menu {
 .social-menu li a{
     text-decoration: none;
     color: rgb(167, 167, 218);
+    transition: all .4s;
+}
+
+.social-menu li a:hover{
+    color: rgb(255, 0, 0);
 }
 
 
 
+
+/* responsiv css */
+@media only screen and (max-width: 768px) and (min-width: 501px) {
+    
+
+    .header-title{
+        padding-top: 10px;
+        font-size: 35px;
+    }
+    
+    .header-description{
+       
+        margin-bottom: 10px;
+        font-size: 22px;
+       
+    
+    }
+    .header-description::before{
+        width: 30px;
+        height: 4px;
+        left: -30px;
+    }
+    
+    .header-description::after{
+        width: 30px;
+        height: 4px;
+        right: -30px;
+    }
+
+    .album {
+        width: 95%;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 10px;
+        row-gap: 10px;
+        padding: 0;
+    }
+
+    .container{
+        display: block;
+        text-align: center;
+    }
+
+    .container p{
+        font-size: 20px;
+        text-transform: lowercase;
+    }
+
+    
+    ul.social-menu {
+        justify-content: center;
+        
+    }
+    
+    .social-menu li{
+        padding: 8px;
+        font-size: 30px;
+    }
+
+}
+
+@media only screen and (max-width : 500px) {
+    .header-title{
+        padding-top: 10px;
+        font-size: 25px;
+    }
+    
+    .header-description{
+       
+        margin-bottom: 10px;
+        font-size: 16px;
+       
+    
+    }
+    .header-description::before{
+        width: 30px;
+        height: 3px;
+        left: -3px;
+    }
+    
+    .header-description::after{
+        width: 30px;
+        height: 3px;
+        right: -3px;
+    }
+
+    .album {
+        width: 95%;
+        grid-template-columns: 1fr;
+        grid-gap: 0px;
+        row-gap: 10px;
+        padding: 0;
+    }
+
+    .container{
+        display: block;
+        text-align: center;
+    }
+
+    .container p{
+        font-size: 16px;
+        text-transform: lowercase;
+    }
+
+    
+    ul.social-menu {
+        justify-content: center;
+        
+    }
+    
+    .social-menu li{
+        padding: 8px;
+        font-size: 20px;
+    }
+}
